2011-11-30  Andrew Wason  <rectalogic@rectalogic.com>

        Replace Qt QThread threading back-end with pthread/Win32 threading back-ends
        https://bugs.webkit.org/show_bug.cgi?id=72155

        Reviewed by Simon Hausmann.

        Use ThreadingPthreads and ThreadingWin instead of ThreadingQt.

        * heap/MachineStackMarker.cpp:
        * wtf/MainThread.cpp:
        (WTF::initializeMainThread):
        * wtf/Platform.h:
        * wtf/ThreadSpecific.h: Drop QThreadStorage related code.
        (WTF::::destroy):
        * wtf/ThreadingPrimitives.h:
        * wtf/qt/MainThreadQt.cpp: Drop Qt specific isMainThread().
        (WTF::initializeMainThreadPlatform): Initialize MainThreadInvoker on main thread to avoid infecting secondary thread with QAdoptedThread.
        (WTF::scheduleDispatchFunctionsOnMainThread):
        * wtf/qt/ThreadingQt.cpp: Removed.
        * wtf/wtf.pro:

2011-11-30  Csaba Osztrogonác  <ossy@webkit.org>

        MacroAssemblerARM does not implement readCallTarget
        https://bugs.webkit.org/show_bug.cgi?id=73413

        Based on Filip Pizlo's patch.

        Buildfix. Rubber-stamped by Gabor Loki.

        * assembler/ARMAssembler.h:
        (JSC::ARMAssembler::readCallTarget):
        * assembler/MacroAssemblerARM.h:
        (JSC::MacroAssemblerARM::readCallTarget):

2011-11-29  Filip Pizlo  <fpizlo@apple.com>

        Resetting a put_by_id inline cache should preserve the "isDirect" bit
        https://bugs.webkit.org/show_bug.cgi?id=73375

        Reviewed by Gavin Barraclough.
        
        For the replace case, we can find out if it was direct by looking at the
        slow call. For the transition case, we explicitly remember if it was
        direct.

        * bytecode/CodeBlock.cpp:
        (JSC::printStructureStubInfo):
        * bytecode/StructureStubInfo.cpp:
        (JSC::StructureStubInfo::deref):
        (JSC::StructureStubInfo::visitWeakReferences):
        * bytecode/StructureStubInfo.h: